k8s/prod/aws-app.yml
apiVersion: v1
kind: Service
metadata:
  name: aws-app-service
  annotations:
        service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  type: NodePort
  selector:
    pod: aws-app
  ports:
    - name: aws-app-port
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-app-deployment
  labels:
    component: aws-app
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: aws-app
  template:
    metadata:
      labels:
        pod: aws-app
    spec:
      containers:
        - name: aws-app
          image: matmotmi158/capstone-app
          imagePullPolicy: Always
          ports:
          - containerPort: 80
