k8s/prod/load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-loadbalancer
spec:
  type: LoadBalancer
  selector:
    pod: aws-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
